[package]
name = "wallet_lab"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wallet_lab"
path = "src/main.rs"

[dependencies]
# Bitcoin crypto library (local)
bitcoin_dojo = { path = "vendor" }

# Web framework
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }

# HTTP client for Blockstream API
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Hex encoding
hex = "0.4"

# Big integer arithmetic (needed for N-s malleability flip, same version as bitcoin_dojo)
num-bigint = "0.4"

